src/test/deca/context/invalid/tests/EXPR-this_not_in_class.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 16: utilisation de this hors d'une déclaration de classe.
// 
// Historique:
//    cree le 22/01/2022


class Test {
    int field;

}
{
    this.field = 5;
}